--- a/app/templates/partials/navbar.html
+++ b/app/templates/partials/navbar.html
@@ -6,7 +6,7 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-          <li class="nav-item"><a class="nav-link text-white" href="/convocazioni">Nuova convocazione</a></li>
+          <li class="nav-item"><a class="nav-link text-white" href="/">Nuova convocazione</a></li>
           <li class="nav-item"><a class="nav-link text-white" href="/convocazioni">Lista</a></li>
           <li class="nav-item "><a class="nav-link text-white" href="/gestione-sport">Sports e categorie</a></li>
           <li class="nav-item">
