--- a/app/templates/gestione-sport.html
+++ b/app/templates/gestione-sport.html
@@ -42,28 +42,29 @@
                     </select>
                 </h3>
                 
-                <form action="/add-categoria" method="post" class="row g-4 align-items-end">
-                    <!-- Categoria e Indennizzo nella stessa riga -->
-                    <div class="row">
-                        <div class="col-md-6">
-                            <label class="form-label fw-bold">Nome Categoria</label>
-                            <input name="nome_categoria" class="form-control" maxlength="40" required 
-                                   placeholder="Inserisci nome categoria">
-                        </div>
-                        <div class="col-md-6">
-                            <label class="form-label fw-bold">Indennizzo (CHF)</label>
-                            <input name="indennizzo" class="form-control" type="number" step="0.01" required
-                                   placeholder="0.00">
-                        </div>
+                <form action="/add-categoria" method="post" class="row g-3 align-items-end">
+                    <input type="hidden" name="sport_id" id="selectedSportInput">
+                
+                    <!-- Categoria -->
+                    <div class="col-md-5 col-sm-12">
+                        <label class="form-label fw-bold">Nome Categoria</label>
+                        <input name="nome_categoria" class="form-control" maxlength="40" required placeholder="Inserisci nome categoria">
                     </div>
-
+                
+                    <!-- Indennizzo -->
+                    <div class="col-md-3 col-sm-12">
+                        <label class="form-label fw-bold">Indennizzo (CHF)</label>
+                        <input name="indennizzo" class="form-control" type="number" step="0.01" required placeholder="0.00">
+                    </div>
+                
                     <!-- Bottone -->
-                    <div class="col-12">
-                        <button class="btn btn-success py-2"></button>
+                    <div class="col-md-2 col-sm-12">
+                        <label class="form-label invisible">Azione</label>
+                        <button class="btn btn-success w-100 py-2">
                             <i class="fas fa-plus me-2"></i>Aggiungi
                         </button>
                     </div>
-                </form>
+                </form>                
             </div>
         </div>
         
@@ -80,6 +81,7 @@
     <script>
         const sportSelector = document.getElementById('sportSelector');
         const categorieWrapper = document.getElementById('categorieTableContainer');
+        const selectedSportInput = document.getElementById('selectedSportInput');
 
     const allCategorie = JSON.parse('{{ sport_categorie | tojson | safe }}');
 
