--- a/app/templates/gestione-sport.html
+++ b/app/templates/gestione-sport.html
@@ -43,28 +43,21 @@
                 </h3>
                 
                 <form action="/add-categoria" method="post" class="row g-3 align-items-end">
-                    <input type="hidden" name="sport_id" id="selectedSportInput">
-                
-                    <!-- Categoria -->
-                    <div class="col-md-5 col-sm-12">
+                    <div class="col-md-4">
                         <label class="form-label fw-bold">Nome Categoria</label>
                         <input name="nome_categoria" class="form-control" maxlength="40" required placeholder="Inserisci nome categoria">
                     </div>
-                
-                    <!-- Indennizzo -->
-                    <div class="col-md-3 col-sm-12">
+                    <div class="col-md-3">
                         <label class="form-label fw-bold">Indennizzo (CHF)</label>
                         <input name="indennizzo" class="form-control" type="number" step="0.01" required placeholder="0.00">
                     </div>
-                
-                    <!-- Bottone -->
-                    <div class="col-md-2 col-sm-12">
-                        <label class="form-label invisible">Azione</label>
-                        <button class="btn btn-success w-100 py-2">
+                    <div class="col-md-2">
+                        <label class="form-label fw-bold d-none d-md-block">&nbsp;</label> <!-- spazio sopra il bottone -->
+                        <button class="btn btn-success w-100">
                             <i class="fas fa-plus me-2"></i>Aggiungi
                         </button>
                     </div>
-                </form>                
+                </form>                           
             </div>
         </div>
         
